# TWIC-Project

./: .gitignore  LICENSE  README.md
docs/: README.md
docs/diagrams/: README.md
docs/diagrams/plantuml-code/: auth_flowchart  auth_sequence  employee_operation_sequence  enrolment_flowchart  gantt_chart  usecase_diagram
docs/notes/: README.md  week1
docs/notes/week-0/: kickoff-meeting.md
docs/notes/week-1/: September-10-Meeting.md
docs/notes/week-2/: ProfMeetingSept18.md  September-19-Meeting.md  use-cases.md
docs/notes/week-3/: ProfMeetingSept25.md  September25.md
docs/notes/week-4/: October-2-Meeting.md
docs/prototypes/: prototypes.md
docs/prototypes/threads-prototype/: README.md
docs/prototypes/threads-prototype/src/: machine.rs  main.rs  person.rs
src/checkpoint/: Cargo.toml  README.md
src/checkpoint/hw/: fpm.py  rfid.py  rfid_test.py
src/checkpoint/src/: .main.rs.swp  client.rs  fingerprint.rs  fpm.py  main.rs  main_test.rs  person.rs  rfid.py  rfid.rs
src/common/: Cargo.toml
src/common/src/: .lib.rs.swp  lib.rs
src/database/: Cargo.toml  test_db.sh
src/database/src/: main.rs
src/port/src/: client.rs  client_log.txt  machine.rs  main.rs
src/port_server/: Cargo.toml  test_server.sh
src/port_server/src/: main.rs
src/server/src/: main.rs
src/tui/: Cargo.toml
src/tui/src/: app.rs  main.rs
