[package]
name = "checkpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
thiserror = "2.0"
serialport = "4.0"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
common = { path = "../common" }
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
rppal = "0.14"
