[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
rusqlite = "0.32.1"
rppal = "0.22.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
polynomial-ring = "0.5.0"
rand = "0.9.0"
rand_distr = "0.5.0" 
openssl = "0.10" 
hex = "0.4.3"
base64 = "0.21"
