[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
ctrlc = "3.2"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
common = { path = "../common" }
rusqlite = "0.32.1"
chrono = "0.4.39"
hex = "0.4.3"
lazy_static = "1.4"
base64 = "0.22.1"
